Fixed logo Alura

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="./assets/Frame 6.png" alt="Logo da Alura">
+        <img src="./assets/Frame 6.png" alt="Logo da Alura" id="logoAlura">
     </header>
 
     <main class="conteudoPrincipal">
